test/spec_vectors/f64/fail/module_9.wat
(module (func (result f64) (f64.nearest (i64.const 0))))